LP/Python/PracticaV2/gParser.py
# Generated from g.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gParser ( Parser ):

    grammarFileName = "g.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'=:'", "'#'", "']'", "'('", "')'", "'~'", 
                     "'i.'", "':'", "'/'", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "BOP", 
                      "COMMENT", "NUM", "NL", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assign = 2
    RULE_expr = 3
    RULE_major = 4
    RULE_minor = 5
    RULE_flip = 6
    RULE_uop = 7
    RULE_numList = 8
    RULE_num = 9
    RULE_neg = 10

    ruleNames =  [ "program", "statement", "assign", "expr", "major", "minor", 
                   "flip", "uop", "numList", "num", "neg" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    ID=11
    BOP=12
    COMMENT=13
    NUM=14
    NL=15
    WS=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gParser.StatementContext)
            else:
                return self.getTypedRuleContext(gParser.StatementContext,i)


        def getRuleIndex(self):
            return gParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = gParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 23708) != 0):
                self.state = 22
                self.statement()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(gParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprStContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(gParser.ExprContext,0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(gParser.NL)
            else:
                return self.getToken(gParser.NL, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprSt" ):
                return visitor.visitExprSt(self)
            else:
                return visitor.visitChildren(self)


    class AssignStContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assign(self):
            return self.getTypedRuleContext(gParser.AssignContext,0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(gParser.NL)
            else:
                return self.getToken(gParser.NL, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignSt" ):
                return visitor.visitAssignSt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = gParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = gParser.AssignStContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.assign()
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 31
                    self.match(gParser.NL)
                    self.state = 36
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                localctx = gParser.ExprStContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.expr()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 38
                    self.match(gParser.NL)
                    self.state = 43
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(gParser.ExprContext,0)


        def getRuleIndex(self):
            return gParser.RULE_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = gParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(gParser.ID)
            self.state = 47
            self.match(gParser.T__0)
            self.state = 48
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FilterOPContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def major(self):
            return self.getTypedRuleContext(gParser.MajorContext,0)

        def expr(self):
            return self.getTypedRuleContext(gParser.ExprContext,0)

        def flip(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gParser.FlipContext)
            else:
                return self.getTypedRuleContext(gParser.FlipContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilterOP" ):
                return visitor.visitFilterOP(self)
            else:
                return visitor.visitChildren(self)


    class MajorOrMinorContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def major(self):
            return self.getTypedRuleContext(gParser.MajorContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMajorOrMinor" ):
                return visitor.visitMajorOrMinor(self)
            else:
                return visitor.visitChildren(self)


    class BinaryOPContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def major(self):
            return self.getTypedRuleContext(gParser.MajorContext,0)

        def BOP(self):
            return self.getToken(gParser.BOP, 0)
        def expr(self):
            return self.getTypedRuleContext(gParser.ExprContext,0)

        def flip(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gParser.FlipContext)
            else:
                return self.getTypedRuleContext(gParser.FlipContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinaryOP" ):
                return visitor.visitBinaryOP(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = gParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = gParser.FilterOPContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.major()
                self.state = 51
                self.match(gParser.T__1)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 52
                    self.flip()
                    self.state = 57
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 58
                self.expr()
                pass

            elif la_ == 2:
                localctx = gParser.BinaryOPContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.major()
                self.state = 61
                self.match(gParser.BOP)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 62
                    self.flip()
                    self.state = 67
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 68
                self.expr()
                pass

            elif la_ == 3:
                localctx = gParser.MajorOrMinorContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.major()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MajorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gParser.RULE_major

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IdValueContext(MajorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.MajorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(gParser.ID, 0)
        def major(self):
            return self.getTypedRuleContext(gParser.MajorContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdValue" ):
                return visitor.visitIdValue(self)
            else:
                return visitor.visitChildren(self)


    class ToMinorContext(MajorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.MajorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def minor(self):
            return self.getTypedRuleContext(gParser.MinorContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToMinor" ):
                return visitor.visitToMinor(self)
            else:
                return visitor.visitChildren(self)



    def major(self):

        localctx = gParser.MajorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_major)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = gParser.IdValueContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(gParser.ID)
                self.state = 74
                self.major()
                pass

            elif la_ == 2:
                localctx = gParser.ToMinorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.minor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MinorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gParser.RULE_minor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UnitaryOPContext(MinorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.MinorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def uop(self):
            return self.getTypedRuleContext(gParser.UopContext,0)

        def minor(self):
            return self.getTypedRuleContext(gParser.MinorContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnitaryOP" ):
                return visitor.visitUnitaryOP(self)
            else:
                return visitor.visitChildren(self)


    class ListContext(MinorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.MinorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def numList(self):
            return self.getTypedRuleContext(gParser.NumListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)


    class OnlyUnitaryContext(MinorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.MinorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def uop(self):
            return self.getTypedRuleContext(gParser.UopContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOnlyUnitary" ):
                return visitor.visitOnlyUnitary(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(MinorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.MinorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(gParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class IdentityContext(MinorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.MinorContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentity" ):
                return visitor.visitIdentity(self)
            else:
                return visitor.visitChildren(self)


    class PrioContext(MinorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gParser.MinorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(gParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrio" ):
                return visitor.visitPrio(self)
            else:
                return visitor.visitChildren(self)



    def minor(self):

        localctx = gParser.MinorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_minor)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = gParser.ListContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.numList()
                pass

            elif la_ == 2:
                localctx = gParser.UnitaryOPContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.uop()
                self.state = 80
                self.minor()
                pass

            elif la_ == 3:
                localctx = gParser.IdentityContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.match(gParser.T__2)
                pass

            elif la_ == 4:
                localctx = gParser.OnlyUnitaryContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.uop()
                pass

            elif la_ == 5:
                localctx = gParser.PrioContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.match(gParser.T__3)
                self.state = 85
                self.expr()
                self.state = 86
                self.match(gParser.T__4)
                pass

            elif la_ == 6:
                localctx = gParser.IdContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.match(gParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FlipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gParser.RULE_flip

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlip" ):
                return visitor.visitFlip(self)
            else:
                return visitor.visitChildren(self)




    def flip(self):

        localctx = gParser.FlipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_flip)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(gParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOP(self):
            return self.getToken(gParser.BOP, 0)

        def getRuleIndex(self):
            return gParser.RULE_uop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUop" ):
                return visitor.visitUop(self)
            else:
                return visitor.visitChildren(self)




    def uop(self):

        localctx = gParser.UopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_uop)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(gParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(gParser.T__6)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.match(gParser.BOP)
                self.state = 96
                self.match(gParser.T__7)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                self.match(gParser.BOP)
                self.state = 98
                self.match(gParser.T__8)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 99
                self.match(gParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def num(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gParser.NumContext)
            else:
                return self.getTypedRuleContext(gParser.NumContext,i)


        def getRuleIndex(self):
            return gParser.RULE_numList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumList" ):
                return visitor.visitNumList(self)
            else:
                return visitor.visitChildren(self)




    def numList(self):

        localctx = gParser.NumListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_numList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 102
                    self.num()

                else:
                    raise NoViableAltException(self)
                self.state = 105 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(gParser.NUM, 0)

        def neg(self):
            return self.getTypedRuleContext(gParser.NegContext,0)


        def getRuleIndex(self):
            return gParser.RULE_num

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNum" ):
                return visitor.visitNum(self)
            else:
                return visitor.visitChildren(self)




    def num(self):

        localctx = gParser.NumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_num)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 107
                self.neg()


            self.state = 110
            self.match(gParser.NUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NegContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gParser.RULE_neg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNeg" ):
                return visitor.visitNeg(self)
            else:
                return visitor.visitChildren(self)




    def neg(self):

        localctx = gParser.NegContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_neg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(gParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





